update OpenAPI documentation
